Added integers for month and day
